# trash-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
LICENSES/: TRASH-UPSTREAM-MIT.txt
src/trash_py/: __init__.py  _ext.c  _log.py  arrays.py  classify.py  cli.py  genomic_bins.py  io_csv.py  io_fasta.py  io_gff.py  mapping.py  merge_windows.py  pipeline.py  sequence.py  shift.py  summarise.py  window_score.py
tests/: compare.py  test_arrays_collapse.py  test_arrays_split.py  test_arrays_top_n.py  test_arrays_window.py  test_external_check.py  test_parity.py  test_parity_cen1.py  test_parity_parallel.py  test_templates.py
tests/data/: test_templates.fasta
tests/golden/Ath_CEN1_r_ref/: Ath_CEN1.fasta.gz_aregarrays.csv  Ath_CEN1.fasta.gz_arrays.csv  Ath_CEN1.fasta.gz_arrays.gff  Ath_CEN1.fasta.gz_classarrays.csv  Ath_CEN1.fasta.gz_no_repeats_arrays.csv  Ath_CEN1.fasta.gz_regarrays.csv  Ath_CEN1.fasta.gz_repeats.csv  Ath_CEN1.fasta.gz_repeats.gff  Ath_CEN1.fasta.gz_repeats_with_seq.csv  Ath_CEN1.fasta.gz_run_time.csv
tests/golden/ath_Chr1_extraction_trc_r_ref/: ath_Chr1_extraction_trc.fasta_aregarrays.csv  ath_Chr1_extraction_trc.fasta_arrays.csv  ath_Chr1_extraction_trc.fasta_arrays.gff  ath_Chr1_extraction_trc.fasta_classarrays.csv  ath_Chr1_extraction_trc.fasta_regarrays.csv  ath_Chr1_extraction_trc.fasta_repeats.csv  ath_Chr1_extraction_trc.fasta_repeats.gff  ath_Chr1_extraction_trc.fasta_repeats_with_seq.csv  ath_Chr1_extraction_trc.fasta_run_time.csv
