[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trash-py"
version = "0.1.0"
description = "Tandem-repeat array identifier — Python port of TRASH."
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Michael Beavitt" },
]
keywords = ["bioinformatics", "tandem-repeat", "satellite-dna", "centromere", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.83",
    "numpy>=1.26",
    "pyhmmer>=0.10",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
trash-py = "trash_py.cli:main"

[project.urls]
Homepage = "https://github.com/mbeavitt/TRASH-py"
Upstream = "https://github.com/vlothec/TRASH_2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
